tests/ui/mir-dataflow/liveness-enum.stderr
error: crablangc_peek: bit not set
  --> $DIR/liveness-enum.rs:15:5
   |
LL |     crablangc_peek(x);
   |     ^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 2 previous errors

